--- a/Antologia/styles/style.css
+++ b/Antologia/styles/style.css
@@ -26,6 +26,15 @@ a[href]:hover {
     color: #003399; /* Colore blu più scuro per hover */
 }
 
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #333; /* colore del testo */
+    margin: 1rem 0; /* spaziatura sopra e sotto */
+    text-align: justify; /* testo giustificato */
+}
+
 h1, h2, h3 {
     color: #003366; /* Blu uniforme per titoli */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); 
